@startuml

class User {
    +id : Integer
    +username : String
    +email : String
    -password_hash : String
    +created_at : DateTime

    +set_password(password) : void
    +check_password(password) : Boolean
}

class Message {
    +id : Integer
    +sender_id : Integer
    +receiver_id : Integer
    +subject : String
    +body : Text
    +is_read : Boolean
    +created_at : DateTime
}

class Attachment {
    +id : Integer
    +message_id : Integer
    +original_name : String
    +stored_name : String
    +uploaded_at : DateTime
}

User "1" --> "0..*" Message : sends
User "1" --> "0..*" Message : receives
Message "1" --> "0..1" Attachment : has


@enduml
